# moco

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml
include/compositor/: Events.hpp  moco.hpp
include/compositor/backend/: BackendBase.hpp  Keyboard.hpp  LibInput.hpp
include/compositor/helper/: Matrix.hpp
include/compositor/wayland/: Buffer.hpp  Compositor.hpp  Keyboard.hpp  ObjectImplementationBase.hpp  PixelFormat.hpp  Region.hpp  Seat.hpp  SharedMemory.hpp  SharedMemoryPool.hpp  Surface.hpp
src/: CMakeLists.txt  main.cpp
src/compositor/: CMakeLists.txt  moco.cpp
src/compositor/backend/: CMakeLists.txt  Keyboard.cpp  LibInput.cpp
src/compositor/wayland/: Buffer.cpp  CMakeLists.txt  Compositor.cpp  Keyboard.cpp  Region.cpp  Seat.cpp  SharedMemory.cpp  SharedMemoryPool.cpp  Surface.cpp
